--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 steamworks = {version = "0.10.0", features = ["serde"] }
 tokio = { version = "1.29.1", features = ["full"] }
+xrandr-parser = "0.3.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
